bump font size to prevent zoomimg on iOS

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -195,8 +195,8 @@ main {
   background: white;
   border: none;
   border-radius: 0;
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 1.3;
   margin-bottom: 8px;
 
   &::placeholder {
